show target weight, use localstorage

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <input id="userCurrent" class="input" inputmode="decimal" placeholder="e.g. 85.0" />
               </label>
             </div>
+            <!-- shows what current weight the user would need to have in order to match the app owner's loss percentage -->
+            <div id="userTarget" class="meta"></div>
           </div>
         </section>
 
